--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,6 @@
         <file>res/sprite_sheets/dungeon_sheet.png</file>
         <file>res/sprite_sheets/knight_anim_sheet.png</file>
         <file>res/sprite_sheets/knight_turn_sheet.png</file>
+        <file>res/sprite_sheets/knight_16x16_sheet.png</file>
     </qresource>
 </RCC>
